jus a random edit

--- a/project108/.classpath
+++ b/project108/.classpath
@@ -4,3 +4,4 @@
 	<classpathentry kind="lib" path="KDD_Action_Rules_Gen.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
+youromanchuga
